# chrono-mcp-core

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/chrono_mcp_core/: __init__.py  models.py  solver.py
tests/: test_solver.py
