[project]
name = "chrono-mcp-core"
version = "0.1.0"
description = "Core models and utilities for Chrono MCP services"
authors = [{ name = "Three Little Birds" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/Three-Little-Birds/chrono-mcp-core"
Repository = "https://github.com/Three-Little-Birds/chrono-mcp-core"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
